[project]
name = "devforum"
version = "0.1.0"
description = ""
authors = [
    { name = "Soikr", email = "Soikr@proton.me" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.33.0,<5.0.0)",
    "pex (>=2.40.2,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"