[tool.poetry]
name = "DevforumAuto"
version = "0.1.0"
homepage = "https://github.com/Soikr/devforumauto"
description = "Automates devforum logins and reads posts."
authors = ["Soikr <Soikr@pm.me>"]
maintainers = ["Soikr <Soikr@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
selenium = ">=4.29.0,<4.30.0"
pex = ">=2.38.1,<3.0.0"
toml = ">=0.10.2,<0.11.0"
click = ">=8.2.1,<9.0.0"
tqdm = ">=4.67.1,<5.0.0"

[tool.poetry.scripts]
devforumauto = "devforumauto.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"